--- a/msvs/unit_test/unit_test.vcxproj.filters
+++ b/msvs/unit_test/unit_test.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="..\..\examples\unit_test\unit_test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\simple_road_map.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\examples\unit_test\vvs.h">
@@ -26,7 +29,10 @@
     <ClInclude Include="..\..\src\directed_graph.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\examples\unit_test\test_directed_graph.hpp">
+    <ClInclude Include="..\..\src\simple_road_map.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\examples\unit_test\test_simple_road_map.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
