--- a/msvs/unit_test/unit_test.vcxproj
+++ b/msvs/unit_test/unit_test.vcxproj
@@ -89,14 +89,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\examples\unit_test\test_directed_graph.hpp" />
-    <ClInclude Include="..\..\examples\unit_test\test_localizer.hpp" />
+    <ClInclude Include="..\..\examples\unit_test\test_simple_localizer.hpp" />
     <ClInclude Include="..\..\examples\unit_test\test_simple_road.hpp" />
     <ClInclude Include="..\..\examples\unit_test\vvs.h" />
     <ClInclude Include="..\..\src\data_structure.hpp" />
     <ClInclude Include="..\..\src\directed_graph.hpp" />
     <ClInclude Include="..\..\src\localizer.hpp" />
-    <ClInclude Include="..\..\src\localizer_metric.hpp" />
-    <ClInclude Include="..\..\src\localizer_topometric.hpp" />
+    <ClInclude Include="..\..\src\simple_localizer.hpp" />
     <ClInclude Include="..\..\src\simple_road_map.hpp" />
     <ClInclude Include="..\..\src\simple_road_painter.hpp" />
   </ItemGroup>
