--- a/msvs/unit_test/unit_test.vcxproj
+++ b/msvs/unit_test/unit_test.vcxproj
@@ -92,9 +92,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\examples\unit_test\unit_test.cpp" />
     <ClCompile Include="..\..\EXTERNAL\qgroundcontrol\UTM.cpp" />
     <ClCompile Include="..\..\src\simple_road_map.cpp" />
+    <ClCompile Include="..\..\examples\unit_test\main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\examples\unit_test\test_directed_graph.hpp" />
@@ -102,9 +102,10 @@
     <ClInclude Include="..\..\examples\unit_test\test_simple_localizer.hpp" />
     <ClInclude Include="..\..\examples\unit_test\test_simple_road.hpp" />
     <ClInclude Include="..\..\examples\unit_test\vvs.h" />
-    <ClInclude Include="..\..\src\data_structure.hpp" />
+    <ClInclude Include="..\..\src\basic_type.hpp" />
     <ClInclude Include="..\..\src\directed_graph.hpp" />
     <ClInclude Include="..\..\src\localizer.hpp" />
+    <ClInclude Include="..\..\src\opencx.hpp" />
     <ClInclude Include="..\..\src\simple_localizer.hpp" />
     <ClInclude Include="..\..\src\simple_road_map.hpp" />
     <ClInclude Include="..\..\src\simple_road_painter.hpp" />
