--- a/examples/guidance_test/guidance_test.vcxproj
+++ b/examples/guidance_test/guidance_test.vcxproj
@@ -11,8 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{3CC90140-7D1B-494F-AD0C-5EBDC0A12DBE}</ProjectGuid>
-    <RootNamespace>3dv_tutorial</RootNamespace>
+    <ProjectGuid>{F763329B-5B6C-414A-BDBA-F2BB39FDF4D0}</ProjectGuid>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup>
@@ -92,18 +91,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\EXTERNAL\qgroundcontrol\UTM.cpp" />
-    <ClCompile Include="..\..\src\simple_road_map.cpp" />
-    <ClCompile Include="..\..\examples\simple_test\main.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\src\basic_type.hpp" />
-    <ClInclude Include="..\..\src\directed_graph.hpp" />
-    <ClInclude Include="..\..\src\localizer.hpp" />
-    <ClInclude Include="..\..\src\opencx.hpp" />
-    <ClInclude Include="..\..\src\simple_localizer.hpp" />
-    <ClInclude Include="..\..\src\simple_road_map.hpp" />
-    <ClInclude Include="..\..\src\simple_road_painter.hpp" />
+    <ClCompile Include="..\..\src\core\simple_road_map.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
