--- a/examples/unit_test/unit_test.vcxproj
+++ b/examples/unit_test/unit_test.vcxproj
@@ -12,7 +12,6 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{0DBFC5CD-E6C4-4D4C-9691-140CCBDCF8AF}</ProjectGuid>
-    <RootNamespace>3dv_tutorial</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup>
@@ -93,22 +92,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\EXTERNAL\qgroundcontrol\UTM.cpp" />
-    <ClCompile Include="..\..\src\simple_road_map.cpp" />
-    <ClCompile Include="..\..\examples\unit_test\main.cpp" />
+    <ClCompile Include="..\..\src\core\simple_road_map.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\examples\unit_test\test_directed_graph.hpp" />
-    <ClInclude Include="..\..\examples\unit_test\test_gps2utm.hpp" />
-    <ClInclude Include="..\..\examples\unit_test\test_simple_localizer.hpp" />
-    <ClInclude Include="..\..\examples\unit_test\test_simple_road.hpp" />
-    <ClInclude Include="..\..\examples\unit_test\vvs.h" />
-    <ClInclude Include="..\..\src\basic_type.hpp" />
-    <ClInclude Include="..\..\src\directed_graph.hpp" />
-    <ClInclude Include="..\..\src\localizer.hpp" />
-    <ClInclude Include="..\..\src\opencx.hpp" />
-    <ClInclude Include="..\..\src\simple_localizer.hpp" />
-    <ClInclude Include="..\..\src\simple_road_map.hpp" />
-    <ClInclude Include="..\..\src\simple_road_painter.hpp" />
+    <ClInclude Include="test_map.hpp" />
+    <ClInclude Include="test_simple_road.hpp" />
+    <ClInclude Include="vvs.h" />
+    <ClInclude Include="test_directed_graph.hpp" />
+    <ClInclude Include="test_simple_localizer.hpp" />
+    <ClInclude Include="test_gps2utm.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
