--- a/examples/proj_template/CMakeLists.txt
+++ b/examples/proj_template/CMakeLists.txt
@@ -4,14 +4,14 @@ set(CMAKE_CXX_STANDARD 11)
 set(BINDIR	"${CMAKE_SOURCE_DIR}/../../bin")
 set(AUTHOR_NAME	"jaeyeong.lee")
 
-get_filename_component(ProjectId ${CMAKE_CURRENT_LIST_DIR} NAME)
+get_filename_com ponent(ProjectId ${CMAKE_CURRENT_LIST_DIR} NAME)
 string(REPLACE " " "_" ProjectId ${ProjectId})
 project(${ProjectId} C CXX)
 find_package( OpenCV REQUIRED )
 
 INCLUDE_DIRECTORIES ( ${CMAKE_SOURCE_DIR}/../../src )
 
-file(GLOB SOURCES ${CMAKE_SOURCE_DIR}/../../src/*.cpp *.cpp)
+file(GLOB SOURCES ${CMAKE_SOURCE_DIR}/../../src/*.cpp ${CMAKE_SOURCE_DIR}/../../src/core/*.cpp *.cpp)
  
 add_executable(${PROJECT_NAME} ${SOURCES}  )
 target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS} )
