[MapManager] Modify files for using hpp files in the "core" folder

--- a/examples/map_manager_test/map_manager_test.vcxproj
+++ b/examples/map_manager_test/map_manager_test.vcxproj
@@ -95,7 +95,9 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\src\core\path.hpp" />
     <ClInclude Include="..\..\src\dg_map_manager.hpp" />
+    <ClInclude Include="..\..\src\map_manager\map_manager.hpp" />
     <ClInclude Include="test_map_manager.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
