--- a/examples/map_manager_test/map_manager_test.vcxproj.filters
+++ b/examples/map_manager_test/map_manager_test.vcxproj.filters
@@ -29,5 +29,11 @@
     <ClInclude Include="..\..\src\dg_map_manager.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\map_manager\map_manager.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\core\path.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
