--- a/examples/unit_test/unit_test.vcxproj
+++ b/examples/unit_test/unit_test.vcxproj
@@ -92,13 +92,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\EXTERNAL\qgroundcontrol\UTM.cpp" />
+    <ClCompile Include="..\..\src\localizer\simple_road_map.cpp" />
     <ClCompile Include="main.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="test_map.hpp" />
-    <ClInclude Include="vvs.h" />
-    <ClInclude Include="test_directed_graph.hpp" />
-    <ClInclude Include="test_gps2utm.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
