--- a/examples/unit_test/unit_test.vcxproj
+++ b/examples/unit_test/unit_test.vcxproj
@@ -103,6 +103,11 @@
     <ClInclude Include="..\..\src\core\map.hpp" />
     <ClInclude Include="..\..\src\localizer\simple_localizer.hpp" />
     <ClInclude Include="..\..\src\localizer\simple_road_map.hpp" />
+    <ClInclude Include="test_core_graph.hpp" />
+    <ClInclude Include="test_core_map.hpp" />
+    <ClInclude Include="test_localizer_gps2utm.hpp" />
+    <ClInclude Include="test_localizer_road.hpp" />
+    <ClInclude Include="test_localizer_simple.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
