--- a/examples/guidance_test/guidance_test.vcxproj.filters
+++ b/examples/guidance_test/guidance_test.vcxproj.filters
@@ -15,13 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\src\core\simple_road_map.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="guidance.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\localizer\simple_road_map.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
