[MapManager] Add "map_manager.hpp" file in "map_manager_test" project

--- a/examples/map_manager_test/map_manager_test.vcxproj
+++ b/examples/map_manager_test/map_manager_test.vcxproj
@@ -96,6 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\dg_map_manager.hpp" />
+    <ClInclude Include="..\..\src\map_manager\map_manager.hpp" />
     <ClInclude Include="test_map_manager.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
