--- a/examples/guidance_test/guidance_test.vcxproj
+++ b/examples/guidance_test/guidance_test.vcxproj
@@ -92,10 +92,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\localizer\simple_road_map.cpp" />
+    <ClCompile Include="..\..\src\map_manager\map_manager.cpp" />
     <ClCompile Include="guidance.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\src\map_manager\map_manager.hpp" />
     <ClInclude Include="guidance.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
