[road_recog] update c++ example

--- a/examples/road_recog_test/road_recog_test.vcxproj.filters
+++ b/examples/road_recog_test/road_recog_test.vcxproj.filters
@@ -24,4 +24,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\src\road_recog\road_direction_recognizer.py">
+      <Filter>Header Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
