--- a/examples/road_recog_test/road_recog_test.vcxproj
+++ b/examples/road_recog_test/road_recog_test.vcxproj
@@ -96,6 +96,9 @@
   <ItemGroup>
     <ClInclude Include="..\..\src\road_recog\road_direction_recognizer.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\src\road_recog\road_direction_recognizer.py" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
